# kvstore

./: Cargo.toml  README.md  build.rs
proto/: kvstore.proto
src/: client.rs  server.rs
